# multimodal-video-search

./: .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  LICENSE  NOTICE.md  PROJECT_HISTORY.md  README.md  app.py  benchmark_results.md  metrics.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: annotation_notes.md  dataset_manifest.json  rejected_query_tuning_experiment.md  tasks.json
configs/: config.yaml
scripts/: ask.py  integration_test.py  pack_codebase_zip.py  reindex_all.py  reindex_from_artifacts.py  run_benchmark.py  search.py  smoke_test.py
src/: config.py  logging_config.py  models.py  pipeline.py  prompts.py
src/generation/: gemini.py
src/modules/: __init__.py  asr.py  det.py  ocr.py  visual.py
src/retrieval/: embedder.py  qdrant_store.py
src/utils/: telemetry.py  video_frames.py  video_metadata.py
static/: index.html
