[project]
name = "multimodal-video-search"
version = "1.0.0"
description = "Universal system for multimodal semantic video search and generative answering (Video-RAG)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Maksim Lyara", email = "maxlyara1@yandex.ru" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.19",
    "jinja2>=3.1.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.15.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "tqdm>=4.67",
    "google-genai>=1.29.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "accelerate>=1.10.0",
    "safetensors>=0.6.0",
    "sentencepiece>=0.2.0",
    "einops>=0.8.0",
    "pillow>=11.0.0",
    "opencv-python>=4.11.0",
    "torchvision>=0.24.0",
    "easyocr>=1.7.2",
    "openai-whisper>=20240930",
    "spacy>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function call File/Form in argument defaults
    "B904", # raise exception from None
    "C901", # function too complex
    "E402", # module level import not at top of file
    "B023", # loop variable binding in functions
    "B007", # loop control variable not used
    "B905", # zip without strict parameter
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
